# ship_server

./: .gitignore  Makefile.am  autogen.sh  block.c  block.h  clients.c  clients.h  commands.c  commands.h  config.h.in  configure.ac  git_version.am  git_version.sh  gm.h  legits.xml  lobby.c  lobby.h  player.h  ship.c  ship.h  ship_packets.c  ship_packets.h  ship_server.c  shipgate.c  utils.c
doc/: quest_enhancements.md  scripting.md
l10n/: Makefile.am  ship-strings.txt
m4/: cflags.m4
src/: Makefile.am  admin.c  admin.h  bans.c  bans.h  bbdata.c  bbdata.h  block.c  block.h  clients.c  clients.h  commands.c  commands.h  flopen.c  gm.c  gm.h  items.c  items.h  list.c  lobby.c  lobby.h  lookup3.c  mapdata.c  mapdata.h  packets.h  pidfile.c  player.h  pmtdata.c  pmtdata.h  ptdata.c  ptdata.h  quest_functions.c  quest_functions.h  quests.c  quests.h  rtdata.c  rtdata.h  scripts.c  scripts.h  ship.c  (+18 more)
